# api-gateway/cmd/api/docs/swagger.yaml
@@ -178,6 +178,44 @@ paths:
       summary: Create a Problem
       tags:
       - admin
+  /user/problem/{id}:
+    post:
+      consumes:
+      - application/json
+      description: get one problem to display
+      parameters:
+      - description: Problem ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Problem'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Problem'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Problem'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Problem'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Problem'
+      summary: get one problems
+      tags:
+      - user
+      - admin
   /user/signin:
     post:
       consumes:
